--- a/assets/css/modules/header.css
+++ b/assets/css/modules/header.css
@@ -204,19 +204,19 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 50px;
+    height: 70px;
     background-color: #fff;
-    padding: 10px 0;
+    padding: 10px;
     border-bottom: 1px solid #E6E6E6;
     z-index: 3;
+    box-sizing: border-box;
 }
 
 .hamburger-menu-btn {
     display: flex;
-    justify-content: center;
     align-items: center;
     height: 60px;
-    width: 60px;
+    width: 30px;
     z-index: 90;
     cursor: pointer;
 }
@@ -260,10 +260,6 @@
 
 .country,.language,.user{
     display: none;
-}
-
-.bag{
-    margin-right: 20px;
 }
 
 .header-bottom{
